--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -2,10 +2,14 @@
   box-sizing: border-box;
 }
 
-html,
+html {
+  margin: 0;
+  padding: 0;
+  width: 100%;
+}
+
 body {
   margin: 0;
   padding: 0;
   width: 100%;
-  min-height: 100%;
 }
